Updating to list.of for tests