@@ -99,7 +99,7 @@ public class SamhsaMatcherFromClaimTransformerTest {
         PartDEventTransformer.transform(new MetricRegistry(), pdeClaim, Optional.empty());
 
     // Load the claim types into the test data that will be run against each test
-    return Arrays.asList(
+    return List.of(
         new Object[][] {
           {inpatientClaim, inpatientEob},
           {outpatientClaim, outpatientEob},
